# libg-hybrid-port

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  call_graph_NEEDS_TRAMPOLINE.txt  call_graph_SAFE.txt
docs/: CUSTOMIZATION_GUIDE.md
include/game/: libg_api.h  logic_types.h
original/: README.md
scripts/: analyze_call_graph.py  build_hybrid.sh  classify_symbols.py  gen_arm_stubs.py  gen_trampolines.py
src/game_logic/: logic_commands.cpp  logic_protocol.cpp  logic_state.cpp  logic_types.cpp
src/jni/: titan_jni.cpp
symbols/: README.md
tests/: logic_commands_test.cpp  logic_test_host.cpp
